--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -21,14 +22,55 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <a href="#" class="fa fa-facebook"></a>
+			  <a href="#" class="fa fa-twitter"></a>
+			  <a href="#" class="fa fa-instagram"></a>
+			  <a href="#" class="fa fa-linkedin"></a>
+			  <a href="#" class="fa fa-youtube"></a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+			<div class="link-box-1">
+				<h2 class="underline">Links</h2>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Get Started</a></li>
+				</ul>
+			</div>
+			<div class="link-box-2">
+				<h2 class="underline">Services</h2>
+				<ul>
+					<li><a href="#">App Design</a></li>
+					<li><a href="#">Web Design</a></li>
+					<li><a href="#">Logo Design</a></li>
+					<li><a href="#">Banner Design</a></li>
+				</ul>
+			</div>
+			<div class="link-box-3">
+				<h2 class="underline">Other Services</h2>
+				<ul>
+					<li><a href="#">SEO</a></li>
+					<li><a href="#">Content Marketing</a></li>
+					<li><a href="#">Prints</a></li>
+					<li><a href="#">Social Media</a></li>
+				</ul>
+			</div>
+			<div class="link-box-4">
+				<h2 class="underline">Contact</h2>
+				<ul>
+					<li><a href="tel: +918879887262">+91 8879887262</a></li>
+					<li><a href="mailto:contact@company.com">contact@company.com</a></li>
+				</ul>
+			</div>
         </div>
       </div>
       <div class="bottom-details">
         <!-- your code here -->
+		  Copyright &#169; 2021 company.
+		  <a href="#">Privacy policy</a>
       </div>
     </footer>
   </body>
